--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Zaquariah Holland: Future President</title>
+    <title>Zaquariah Holland: Future Director of Communications</title>
 </head>
 
 <body class="has-animations">
